# dacb4ea

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
dacb4ea/algorithms/: AbstractEvolutionAlg.py
docs/: Makefile  index.html
docs/source/: conf.py
