[tool.poetry]
name = "dacb4ea"
version = "0.0.1"
description = "Dynamic autoconfiguration benchmark for evolutionary algorithms"
authors = ["Jiří Valášek <jirka362@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^22.1.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"
toml = "^0.10.2"
sphinx-autoapi = "^1.8.4"
graphviz = "^0.19.1"
pre-commit = "^2.17.0"

[virtualenvs]
create = true
in-project = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '(dacb4ea\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \.vscode
  | __pycache__
  | build
  | dist
  | docs
)/
'''

[tool.mypy]
python_version = 3.9
pretty = true
error_summary = true
color_output = true
show_absolute_path = true
show_column_numbers = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true
files = ["dacb4ea/*", "tests"]

[[tool.mypy.overrides]]
module = "tests"
check_untyped_defs = false
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
